# dimini-sh

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  ISSUES.md  Makefile  compose.dev.yaml  compose.yaml  init-test-db.sql  settings.yaml
docs/: issues.md
migrations/: 20260101000000_create_urls_table.sql  20260304011333_add_caller_provided_to_urls.sql  20260307000000_add_short_code_unique_and_url_hash_index.sql
public/: index.html
public/assets/css/: main.css
public/assets/js/: main.js
scripts/: migrate-prod.sh
src/: main.rs  settings.rs
src/domain/entities/: url.rs
src/repositories/: url_repository.rs
src/services/: short_code.rs
src/use_cases/: create_short_code.rs  get_url.rs  mod.rs
src/utils/: hash.rs
src/webapp/: mod.rs
src/webapp/middleware/: logging.rs  mod.rs
