[package]
name = "dimini-sh"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }

[dev-dependencies]
axum-test = "15"
