[package]
name = "dimini-sh"
version = "0.1.0"
edition = "2021"

[dependencies]
url = "2"
axum = "0.7"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "json"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }
uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
config = "0.14"
sha2 = "0.10"
rand = "0.8"

[dev-dependencies]
axum-test = "15"
