[package]
name = "dimini-sh"
version = "1.0.0"
edition = "2021"

[dependencies]
url = "2"
axum = "0.8"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = [
  "runtime-tokio-rustls",
  "postgres",
  "uuid",
  "json",
  "migrate",
] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "fs"] }
uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
config = "0.15"
sha2 = "0.10"
rand = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

[dev-dependencies]
axum-test = "19"
mockall = "0.14"
tower = { version = "0.5", features = ["util"] }
